# TicketSimulation

./: 0_🎫_Simulation.py  LICENSE  README.md  app.py  hello.py  pyproject.toml  simulation.py  test_simulation.py  translations.py
docs/: CHANGELOG.md  KNOWN_LIMITATIONS.md  README.md  SIMULATION_LOGIC.md  VERSIONING.md
pages/: 1_⚖️_Comparison.py  2_ℹ️_Info.py
