[project]
name = "ticketsimulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.3.251201",
    "plotly>=6.5.0",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]
